Fixed tabs, but splitting panels vertically needs work on smaller screens!

--- a/packages/app/src/app/model-workflow/map-results-view/map-results-view.component.scss
+++ b/packages/app/src/app/model-workflow/map-results-view/map-results-view.component.scss
@@ -103,7 +103,6 @@
 .title-row {
   position: absolute;
   top: -4px;
-  left: 0px;
   z-index: 1;
 }
 
